app/css/style.css
input:focus,
a:focus {
    outline:none;
}

body {
    font-size:16px;
    padding-top:70px;
}

.form-inline {
    margin-bottom:10px;
}

.alerts {
    position: fixed;
    width: 100%;
    z-index: 999;
    opacity: .85;
    padding: 0 10%;
}

#nav-user-dropdown img {
    height:32px;
    width:32px;
}

#nav-user-dropdown .dropdown-toggle {
    padding-top:9px;
    padding-bottom:9px;
}

.select-choice-image {
    width:32px;
    height:32px;
}

.select-match-image {
    width:20px;
    height:20px;
    margin-right:6px;
}

table#defect-list th {
    white-space:nowrap;
}

table#defect-list th.sortable {
    cursor:pointer;
    color:#0078B6;
}

.search-owner-preset {
    margin-top:10px;
}

#news-list-title {
    text-align:center;
    color:#BBB;
}

.news-item {
    margin:0;
    padding:12px 0;
    border-top:1px solid #EEE;
}

.news-item:first-child {
    border:none;
}

.news-item img.media-object {
    width:32px;
    height:32px;
}

.news-item-time {
    color:#999;
}

#quick-search.open {
    border-bottom-left-radius:0;
}

#button-advanced-search.open {
    border-bottom-right-radius:0;
}

#advanced-search-container.open {
    border-top-left-radius:0;
    border-top-right-radius:0;
    border-top:none;
}

#defect-detail-title {
    margin-top:0;
}

.defect-list-item {
    cursor:pointer;
}

.defect-list-owner img.media-object {
    height:32px;
    width:32px;
}

.defect-list-unassigned {
    color:#999;
}

.defect-list-lastmodified {
    white-space:nowrap;
}

.defect-detail-description {
    margin:0 10px 15px 10px;
}

.ta-toolbar {
    margin-bottom:5px;
}

.icon-severity-5 { color:#FF4400; }
.icon-severity-4 { color:#FFA100; }
.icon-severity-3 { color:#11C511; }
.icon-severity-2 { color:#287FB5; }
.icon-severity-1 { color:#00BBFF; }

/* Fix Bootstrap update to 3.3.4 */
.media-body {
    width:auto;
}

